# for-memorycollector

./: README.md
contract/: Cargo.toml  build.sh
contract/res/: vec_issue_memorycollector.wasm
contract/src/: lib.rs
