[package]
name = "vec-issue-memorycollector"
version = "0.0.1"
authors = ["Mike Purvis <mike@near.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.45"
near-sdk = "2.0.0"
#bs58 = "0.4.0"
#base58 = "0.1.0"
rust-base58 = "0.0.4"
hex = "0.4.2"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
# https://rustwasm.github.io/docs/book/reference/code-size.html#optimizing-builds-for-code-size
opt-level = "s"
lto = true
debug = false
panic = "abort"